# Fractals_on_sfml

./: CMakeLists.txt  README.md  main.cpp
AppController/: AppController.cpp  AppController.h
AppModel/: AppModel.cpp  AppModel.h
AppModel/Complex_num/: Complex_num.cpp  Complex_num.h
AppModel/Koch_Snowflake/: Koch_Snowflake.cpp  Koch_Snowflake.h
AppRender/: AppRender.cpp  AppRender.h
